--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a sample website designed for learning HTML and CSS.">
     <meta name="keywords" content="HTML, CSS, Web Design, Beginner">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Alaa El Mediouri">
     <title>My Website</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
@@ -18,7 +18,7 @@
         <p>This is a basic webpage structure to get started.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Alaa El Mediouri. All rights reserved.</p>
     </footer>
 </body>
 </html>
