--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to my HTML and CSS learning Journey!</h1>
     </header>
     <main>
         <p>This is a basic webpage structure to get started.</p>
