--- a/index.html
+++ b/index.html
@@ -3,22 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a sample website designed for learning HTML and CSS.">
-    <meta name="keywords" content="HTML, CSS, Web Design, Beginner">
+    <meta name="description" content="A community website for newcomers providing information about the city, Private schools, and local resources.">
+    <meta name="keywords" content="community center, mussala, Private schools, resources">
     <meta name="author" content="Alaa El Mediouri">
-    <title>My Website</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <title>Welcome to the Community Center</title>
+    <link rel="icon" type="image/png" href="alaapic.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation Menu -->
     <header>
-        <h1>Welcome to my HTML and CSS learning Journey!</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Mussala.html">Mosques</a></li>
+                <li><a href="Schools.html">Islamic Schools</a></li>
+                <li><a href="Resources.html">Resources</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <!-- Main Content -->
     <main>
-        <p>This is a basic webpage structure to get started.</p>
+        <section>
+            <h1>Welcome to the Community Website</h1>
+            <p><strong>Helping newcomers</strong> settle into the city with essential information about community center, private schools, and other local resources.</p>
+        </section>
+
+        <section>
+            <h2>About This Site</h2>
+            <p>This website is designed as a <em>resource hub</em> for our community. Whether you're looking for the nearest mussala, a private school for your children, or other local services, you'll find helpful information here.</p>
+        </section>
+
+        <section>
+            <h2>Community Highlights</h2>
+
+            <article>
+                <h3>Find a Mussala Near You</h3>
+                <p>Discover local community centers, their locations, and <strong>Resources</strong>. </p>
+                <blockquote>“The best of places are the Mussala.” – Prophet Muhammad (ﷺ)</blockquote>
+                <a href="Mussala.html">Explore Mosques</a>
+            </article>
+
+            <article>
+                <h3>Private Schools</h3>
+                <p>Looking for a <em>Private School</em> for your children? Browse a list of schools that provide an academic excellence.</p>
+                <a href="Schools.html">Find a School</a>
+            </article>
+        </section>
     </main>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Alaa El Mediouri. All rights reserved.</p>
+        <p>&copy; 2025 Community Website | <a href="Contact.html">Contact Us</a></p>
     </footer>
 </body>
 </html>
+
