--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             <article>
                 <h3>Find a Mussala Near You</h3>
                 <p>Discover local community centers, their locations, and <strong>Resources</strong>. </p>
-                <blockquote>“The best of places are the Mussala.” – Prophet Muhammad (ﷺ)</blockquote>
-                <a href="Mussala.html">Explore Mosques</a>
+                <a href="Mussala.html">Explore Mussalas</a>
             </article>
 
             <article>
