--- a/index.html
+++ b/index.html
@@ -1,63 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata section: Contains page information for browsers and search engines -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A community website for newcomers providing information about the city, Private schools, and local resources.">
-    <meta name="keywords" content="community center, mussala, Private schools, resources">
+    <meta name="description" content="A community website for newcomers providing information about the city, private schools, and local resources.">
+    <meta name="keywords" content="community center, mussala, private schools, resources">
     <meta name="author" content="Alaa El Mediouri">
     <title>Welcome to the Community Center</title>
     <link rel="icon" type="image/png" href="alaapic.png">
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navigation Menu -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="Mussala.html">Mosques</a></li>
-                <li><a href="Schools.html">Islamic Schools</a></li>
-                <li><a href="Resources.html">Resources</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <!-- Main Content -->
-    <main>
-        <section>
-            <h1>Welcome to the Community Website</h1>
-            <p><strong>Helping newcomers</strong> settle into the city with essential information about community center, private schools, and other local resources.</p>
-        </section>
+<!-- Header Section -->
+<header>
+    <h1>Welcome to the Community Website</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="mussala.html">Mussala</a></li>
+            <li><a href="schools.html">Private Schools</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-        <section>
-            <h2>About This Site</h2>
-            <p>This website is designed as a <em>resource hub</em> for our community. Whether you're looking for the nearest mussala, a private school for your children, or other local services, you'll find helpful information here.</p>
-        </section>
+<!-- Main content area -->
+<main>
+    <section>
+        <p>
+            <strong>Helping newcomers</strong> settle into the city with essential information about the community center, private schools, and other local resources.
+        </p>
+    </section>
 
-        <section>
-            <h2>Community Highlights</h2>
+    <section>
+        <h2>About This Site</h2>
+        <p>
+            This website is designed as a <em>resource hub</em> for our community. Whether you're looking for the nearest mussala, a private school for your children, or other local services, you'll find helpful information here.
+        </p>
+    </section>
 
-            <article>
-                <h3>Find a Mussala Near You</h3>
-                <p>Discover local community centers, their locations, and <strong>Resources</strong>. </p>
-                <a href="Mussala.html">Explore Mussalas</a>
-            </article>
+    <section>
+        <h2>Community Highlights</h2>
 
-            <article>
-                <h3>Private Schools</h3>
-                <p>Looking for a <em>Private School</em> for your children? Browse a list of schools that provide an academic excellence.</p>
-                <a href="Schools.html">Find a School</a>
-            </article>
-        </section>
-    </main>
+        <article>
+            <h3>Find a Center Near You</h3>
+            <p>Discover local community centers, their locations, and resources.</p>
+            <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
+            <a href="resources.html">Explore Lexington</a>
+            <p>
+                <img src="Multimedia files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY">
+            </p>
+        </article>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Community Website | <a href="Contact.html">Contact Us</a></p>
-    </footer>
+        <article>
+            <h3>Private Schools</h3>
+            <p>Looking for a <em>private school</em> for your children? Browse a list of schools that provide academic excellence.</p>
+            <a href="schools.html">Find a School</a>
+        </article>
+    </section>
+
+    <section>
+        <h2>Explore Our Community Resources</h2>
+
+        <blockquote>Strong communities are built on connections, shared spaces, and accessible resources for everyone.</blockquote>
+
+        <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" 
+                title="Best Things to do in Lexington" allowfullscreen>
+            Your browser does not support iframes. <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Watch here</a>.
+        </iframe>
+
+        <ul>
+            <li><a href="#mussala-highlight">Featured Mussala</a></li>
+            <li><a href="#private-school-highlight">Featured Private School</a></li>
+            <li><a href="https://www.ukymsa.org/masjids-musallas" target="_blank">View All Mussalas</a></li>
+            <li><a href="schools.html">View All Private Schools</a></li>
+            <li><a href="resources.html">Explore Local Resources</a></li>
+        </ul>
+
+        <article>
+            <header>
+                <h3 id="mussala-highlight">Featured Mussala: Community Mussala Center</h3>
+                <img src="Multimedia files/mussala_photo.png" title="Community Mussala Center" alt="Community Mussala Center">
+                <p>
+                    The Community Mussala Center serves as a welcoming space for daily prayers, educational programs, and community events. Located in the heart of the city, it offers accessible facilities for all community members.
+                </p>
+            </header>
+            <section>
+                <h4>Facilities & Services</h4>
+                <ul>
+                    <li><strong>Prayer Halls:</strong> Separate areas for men and women</li>
+                    <li><strong>Library:</strong> Books on religious studies, languages, and culture</li>
+                    <li><strong>Community Hall:</strong> Available for events and programs</li>
+                    <li><strong>Parking:</strong> Ample on-site parking</li>
+                    <li><strong>Accessibility:</strong> Wheelchair accessible</li>
+                </ul>
+            </section>
+            <section>
+                <h4>Regular Programs</h4>
+                <ul>
+                    <li><strong>Daily Prayers:</strong> Fajr, Dhuhr, Asr, Maghrib, Isha</li>
+                    <li><strong>Various Classes:</strong> Open to children and adults</li>
+                    <li><strong>Community Lectures:</strong> Weekly educational sessions</li>
+                    <li><strong>Volunteer Opportunities:</strong> Help with events, outreach, and more</li>
+                </ul>
+            </section>
+        </article>
+
+        <article>
+            <header>
+                <h3 id="private-school-highlight">Featured Private School: Future Leaders Academy</h3>
+                <img src="Multimedia files/private_school.png" title="Future Leaders" alt="Future Leaders">
+                <p>
+                    Future Leaders provides students with a balanced education that emphasizes academic excellence, character development, and community engagement. Serving grades K-12, the school aims to prepare students for lifelong success.
+                </p>
+            </header>
+            <section>
+                <h4>Academic Programs</h4>
+                <ul>
+                    <li><strong>Core Subjects:</strong> Math, Science, Language Arts, Social Studies</li>
+                    <li><strong>Languages:</strong> English, Spanish, Arabic, French</li>
+                    <li><strong>Clubs & Activities:</strong> Robotics, Art, Spelling Bee</li>
+                    <li><strong>Resources:</strong> Counseling and university partnerships</li>
+                </ul>
+            </section>
+            <section>
+                <h4>Facilities</h4>
+                <ul>
+                    <li><strong>Science Labs:</strong> Fully equipped for hands-on learning</li>
+                    <li><strong>Technology Center:</strong> Computers</li>
+                    <li><strong>Sports Facilities:</strong> Basketball and Soccer</li>
+                    <li><strong>Library:</strong> Wide range of academic and fiction books</li>
+                </ul>
+            </section>
+        </article>
+    </section>
+</main>
+
+<!-- Footer Section -->
+<footer>
+    <p>&copy; 2025 Community Website | <a href="contact.html">Contact Us</a></p>
+</footer>
+
 </body>
 </html>
-
