update all my pages

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadata section: Contains page information for browsers and search engines -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A community website for newcomers providing information about the city, private schools, and local resources.">
-    <meta name="keywords" content="community center, mussala, private schools, resources">
+    <meta name="keywords" content="community center, private schools, resources">
     <meta name="author" content="Alaa El Mediouri">
     <title>Welcome to the Community Center</title>
     <link rel="icon" type="image/png" href="alaapic.png">
@@ -19,7 +18,6 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="mussala.html">Mussala</a></li>
             <li><a href="schools.html">Private Schools</a></li>
             <li><a href="resources.html">Resources</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -38,7 +36,7 @@
     <section>
         <h2>About This Site</h2>
         <p>
-            This website is designed as a <em>resource hub</em> for our community. Whether you're looking for the nearest mussala, a private school for your children, or other local services, you'll find helpful information here.
+            This website is designed as a <em>resource hub</em> for our community. Whether you're looking for a private school for your children or other local services, you'll find helpful information here.
         </p>
     </section>
 
@@ -46,7 +44,7 @@
         <h2>Community Highlights</h2>
 
         <article>
-            <h3>Find a Center Near You</h3>
+            <h3>Find a Community Center Near You</h3>
             <p>Discover local community centers, their locations, and resources.</p>
             <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
             <a href="resources.html">Explore Lexington</a>
@@ -73,41 +71,10 @@
         </iframe>
 
         <ul>
-            <li><a href="#mussala-highlight">Featured Mussala</a></li>
             <li><a href="#private-school-highlight">Featured Private School</a></li>
-            <li><a href="https://www.ukymsa.org/masjids-musallas" target="_blank">View All Mussalas</a></li>
             <li><a href="schools.html">View All Private Schools</a></li>
             <li><a href="resources.html">Explore Local Resources</a></li>
         </ul>
-
-        <article>
-            <header>
-                <h3 id="mussala-highlight">Featured Mussala: Community Mussala Center</h3>
-                <img src="Multimedia files/mussala_photo.png" title="Community Mussala Center" alt="Community Mussala Center">
-                <p>
-                    The Community Mussala Center serves as a welcoming space for daily prayers, educational programs, and community events. Located in the heart of the city, it offers accessible facilities for all community members.
-                </p>
-            </header>
-            <section>
-                <h4>Facilities & Services</h4>
-                <ul>
-                    <li><strong>Prayer Halls:</strong> Separate areas for men and women</li>
-                    <li><strong>Library:</strong> Books on religious studies, languages, and culture</li>
-                    <li><strong>Community Hall:</strong> Available for events and programs</li>
-                    <li><strong>Parking:</strong> Ample on-site parking</li>
-                    <li><strong>Accessibility:</strong> Wheelchair accessible</li>
-                </ul>
-            </section>
-            <section>
-                <h4>Regular Programs</h4>
-                <ul>
-                    <li><strong>Daily Prayers:</strong> Fajr, Dhuhr, Asr, Maghrib, Isha</li>
-                    <li><strong>Various Classes:</strong> Open to children and adults</li>
-                    <li><strong>Community Lectures:</strong> Weekly educational sessions</li>
-                    <li><strong>Volunteer Opportunities:</strong> Help with events, outreach, and more</li>
-                </ul>
-            </section>
-        </article>
 
         <article>
             <header>
@@ -117,6 +84,7 @@
                     Future Leaders provides students with a balanced education that emphasizes academic excellence, character development, and community engagement. Serving grades K-12, the school aims to prepare students for lifelong success.
                 </p>
             </header>
+
             <section>
                 <h4>Academic Programs</h4>
                 <ul>
@@ -126,6 +94,7 @@
                     <li><strong>Resources:</strong> Counseling and university partnerships</li>
                 </ul>
             </section>
+
             <section>
                 <h4>Facilities</h4>
                 <ul>
