update the schools and index

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <article>
             <h3>Private Schools</h3>
             <p>Looking for a <em>private school</em> for your children? Browse a list of schools that provide academic excellence.</p>
-            <a href="schools.html">Find a School</a>
+            <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html">Find a School</a>
         </article>
     </section>
 
@@ -71,7 +71,7 @@
         </iframe>
 
         <ul>
-            <li><a href="#private-school-highlight">Featured Private School</a></li>
+        
             <li><a href="schools.html">View All Private Schools</a></li>
             <li><a href="resources.html">Explore Local Resources</a></li>
         </ul>
