--- a/schools.html
+++ b/schools.html
@@ -28,6 +28,8 @@
     <section>
         <h2>Find the Right School</h2>
         <p>Our community is home to a variety of excellent private schools. Explore the list below to find the right fit for your child.</p>
+        <p>Looking for a <em>private school</em> for your children? Browse a list of schools that provide academic excellence.</p>
+        <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html">Find a School</a>
     </section>
 
     <section>
@@ -38,6 +40,8 @@
             <li>Lexington Preparatory School - Grades 9-12</li>
         </ul>
     </section>
+    
+
 </main>
 
 <footer>
