--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <article>
             <header>
                 <h3 id="private-school-highlight">Featured Private School: Future Leaders Academy</h3>
-                <img src="Multimedia files/private_school.png" title="Future Leaders" alt="Future Leaders">
+                <!--<img src="Multimedia files/private_school.png" title="Future Leaders" alt="Future Leaders">-->
                 <p>
                     Future Leaders provides students with a balanced education that emphasizes academic excellence, character development, and community engagement. Serving grades K-12, the school aims to prepare students for lifelong success.
                 </p>
