--- a/schools.html
+++ b/schools.html
@@ -35,9 +35,33 @@
     <section>
         <h2>Featured Private Schools</h2>
         <ul>
-            <li>Future Leaders Academy - Grades K-12</li>
-            <li>Bright Horizons Private School - Grades K-8</li>
-            <li>Lexington Preparatory School - Grades 9-12</li>
+            <li>The Lexington School Learning Center - Grades K-12</li>
+<A branch of The Lexington School
+<section> Type of School: Independent
+1050 Lane Allen Road
+Lexington, KY 40504
+859-278-0501 </section> 
+Date Established: 1959
+Applicable Grades: PS-8th
+Current Enrollment: 558
+Student/Teacher Ratio: 7:1
+Affiliations:
+Approximate Tuition and Fees: $27,000
+Multi-child Discount?</p>
+            <li>Sayre School - Grades PS-12th</li>
+<A branch of The Lexington School
+<section>Type of School: Independent
+194 North Limestone Street
+Lexington, KY 40507
+859-254-1361</section>
+Date Established: 1854
+Applicable Grades: PS-12th
+Current Enrollment: 518
+Student/Teacher Ratio: 7:1
+Affiliations: Montessori ages 3-6
+Approximate Tuition and Fees: $4,000 - $20,370
+Multi-child Discount?</p>    
+            
         </ul>
     </section>
     
