--- a/schools.html
+++ b/schools.html
@@ -8,6 +8,37 @@
     <meta name="author" content="Alaa El Mediouri">
     <title>Private Schools - Community Website</title>
     <link rel="icon" type="image/png" href="alaapic.png">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        main {
+            flex: 1; /* Allows main content to fill the page */
+        }
+
+        .image-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Full viewport height */
+            position: relative;
+        }
+
+        .centered-image {
+            max-width: 90%;
+            max-height: 90%;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
 
@@ -35,38 +66,44 @@
     <section>
         <h2>Featured Private Schools</h2>
         <ul>
-<li>The Lexington School Learning Center - Grades K-12</li>
-<A branch of The Lexington School
-<section> Type of School: Independent
-1050 Lane Allen Road
-Lexington, KY 40504
-859-278-0501 </section> 
-Date Established: 1959
-Applicable Grades: PS-8th
-Current Enrollment: 558
-Student/Teacher Ratio: 7:1
-Affiliations:
-Approximate Tuition and Fees: $27,000
-Multi-child Discount?</A>
-<li>Sayre School - Grades PS-12th</li>
-<A branch of The Lexington School
-<section>Type of School: Independent
-194 North Limestone Street
-Lexington, KY 40507
-859-254-1361</section>
-Date Established: 1854
-Applicable Grades: PS-12th
-Current Enrollment: 518
-Student/Teacher Ratio: 7:1
-Affiliations: Montessori ages 3-6
-Approximate Tuition and Fees: $4,000 - $20,370
-Multi-child Discount?</A>    
-         
+            <li>The Lexington School Learning Center - Grades K-12</li>
+            <a branch of The Lexington School></a>
+            <section>Type of School: Independent
+            1050 Lane Allen Road
+            Lexington, KY 40504
+            859-278-0501
+            <br>Date Established: 1959
+            Applicable Grades: PS-8th
+            Current Enrollment: 558
+            Student/Teacher Ratio: 7:1
+            Affiliations:
+            Approximate Tuition and Fees: $27,000
+            Multi-child Discount?</br></a>
+            </section>
+            <br>
+            <section>
+            <li>Sayre School - Grades PS-12th</li>
+            <a branch of The Lexington School></a>
+            <section>Type of School: Independent
+            194 North Limestone Street
+            Lexington, KY 40507
+            859-254-1361</section>
+            Date Established: 1854
+            Applicable Grades: PS-12th
+            Current Enrollment: 518
+            Student/Teacher Ratio: 7:1
+            Affiliations: Montessori ages 3-6
+            Approximate Tuition and Fees: $4,000 - $20,370
+            Multi-child Discount?</A>
+            </section>
         </ul>
     </section>
-    
-
 </main>
+
+<!-- Full page centered image section -->
+<div class="image-container">
+    <img src="Multimedia files/HandsTogether.jpg" alt="Hands Together" class="centered-image">
+</div>
 
 <footer>
     <p>&copy; 2025 Community Website | <a href="contact.html">Contact Us</a></p>
