--- a/schools.html
+++ b/schools.html
@@ -102,7 +102,7 @@
 
 <!-- Full page centered image section -->
 <div class="image-container">
-    <img src="Multimedia files/HandsTogether.jpg" alt="Hands Together" class="centered-image">
+    <img src="Multimedia files/HandsTogether.jpg" width="400" height="300" title="Hands Together"  class="centered-image">
 </div>
 
 <footer>
@@ -110,4 +110,5 @@
 </footer>
 
 </body>
+</html>
 </html>
