--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <main>
     <section>
         <p>
-            <strong>Helping newcomers</strong> settle into the city with essential information about the community center, private schools, and other local resources.
+            Helping newcomers settle into the city with essential information about the community center, private schools, and other local resources.
         </p>
     </section>
 
@@ -47,7 +47,7 @@
             <h3>Find a Community Center Near You</h3>
             <p>Discover local community centers, their locations, and resources.</p>
             <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
-            <a href="resources.html">Explore Lexington</a>
+            <a href=" https://www.visitlex.com/things-to-do/">Explore Lexington</a>
             <p>
                 <img src="Multimedia files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY">
             </p>
