--- a/resources.html
+++ b/resources.html
@@ -32,12 +32,34 @@
 
     <section>
         <h2>Featured Resources</h2>
-        <ul>
-            <li>Public Libraries</li>
-            <li>Health Clinics</li>
-            <li>Community Events</li>
-            <li>Volunteer Opportunities</li>
-        </ul>
+        <p>Here are some valuable resources available to community members:</p>
+
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Resource Name</th>
+                    <th>Type of Service</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lexington Public Library</td>
+                    <td>Educational & Cultural</td>
+                </tr>
+                <tr>
+                    <td>Community Health Clinic</td>
+                    <td>Healthcare</td>
+                </tr>
+                <tr>
+                    <td>Volunteer Lexington</td>
+                    <td>Volunteer Opportunities</td>
+                </tr>
+                <tr>
+                    <td>Lexington Community Center</td>
+                    <td>Events & Activities</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 </main>
 
