--- a/schools.html
+++ b/schools.html
@@ -28,50 +28,48 @@
     <section>
         <h2>Find the Right School</h2>
         <p>Our community is home to a variety of excellent private schools. Explore the list below to find the right fit for your child.</p>
-        <p></p>Browse a list of schools that provide academic excellence.</p>
-        <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html">Find a School</a>
+        <p>Browse a list of schools that provide academic excellence.</p>
+        <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html" target="_blank">Find a School</a>
     </section>
 
     <section>
         <h2>Featured Private Schools</h2>
         <ul>
-            <li>The Lexington School Learning Center - Grades K-12</li>
-            <a branch of The Lexington School></a>
-            <section>Type of School: Independent
-            1050 Lane Allen Road
-            Lexington, KY 40504
-            859-278-0501
-            <br>Date Established: 1959
-            Applicable Grades: PS-8th
-            Current Enrollment: 558
-            Student/Teacher Ratio: 7:1
-            Affiliations:
-            Approximate Tuition and Fees: $27,000
-            Multi-child Discount?</br></a>
-            </section>
+            <li>
+                <h3>The Lexington School Learning Center - Grades K-12</h3>
+                <p><strong>Type of School:</strong> Independent</p>
+                <p><strong>Address:</strong> 1050 Lane Allen Road, Lexington, KY 40504</p>
+                <p><strong>Phone:</strong> 859-278-0501</p>
+                <p><strong>Date Established:</strong> 1959</p>
+                <p><strong>Applicable Grades:</strong> PS-8th</p>
+                <p><strong>Current Enrollment:</strong> 558</p>
+                <p><strong>Student/Teacher Ratio:</strong> 7:1</p>
+                <p><strong>Approximate Tuition and Fees:</strong> $27,000</p>
+                <p><strong>Multi-child Discount:</strong> Contact school for details.</p>
+            </li>
+
             <br>
-            <section>
-            <li>Sayre School - Grades PS-12th</li>
-            <a branch of The Lexington School></a>
-            <section>Type of School: Independent
-            194 North Limestone Street
-            Lexington, KY 40507
-            859-254-1361</section>
-            Date Established: 1854
-            Applicable Grades: PS-12th
-            Current Enrollment: 518
-            Student/Teacher Ratio: 7:1
-            Affiliations: Montessori ages 3-6
-            Approximate Tuition and Fees: $4,000 - $20,370
-            Multi-child Discount?</A>
-            </section>
+
+            <li>
+                <h3>Sayre School - Grades PS-12th</h3>
+                <p><strong>Type of School:</strong> Independent</p>
+                <p><strong>Address:</strong> 194 North Limestone Street, Lexington, KY 40507</p>
+                <p><strong>Phone:</strong> 859-254-1361</p>
+                <p><strong>Date Established:</strong> 1854</p>
+                <p><strong>Applicable Grades:</strong> PS-12th</p>
+                <p><strong>Current Enrollment:</strong> 518</p>
+                <p><strong>Student/Teacher Ratio:</strong> 7:1</p>
+                <p><strong>Affiliations:</strong> Montessori program for ages 3-6</p>
+                <p><strong>Approximate Tuition and Fees:</strong> $4,000 - $20,370</p>
+                <p><strong>Multi-child Discount:</strong> Contact school for details.</p>
+            </li>
         </ul>
     </section>
 </main>
 
 <!-- Full page centered image section -->
-<div class="image-container">
-    <img src="Multimedia files/HandsTogether.jpg" width="400" height="300" title="Hands Together"  class="centered-image">
+<div class="image-container" style="text-align: center; margin: 20px 0;">
+    <img src="Multimedia files/HandsTogether.jpg" width="400" height="300" title="Hands Together" class="centered-image" alt="Hands Together">
 </div>
 
 <footer>
@@ -79,5 +77,4 @@
 </footer>
 
 </body>
-</html>
 </html>
