--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="keywords" content="community center, private schools, resources">
     <meta name="author" content="Alaa El Mediouri">
     <title>Welcome to the Community Center</title>
-    <link rel="icon" type="image/png" href="alaapic.png">
 </head>
 <body>
 
@@ -38,6 +37,9 @@
         <p>
             This website is designed as a <em>resource hub</em> for our community. Whether you're looking for a private school for your children or other local services, you'll find helpful information here.
         </p>
+        <div style="text-align: center; margin: 20px 0;">
+            <img src="Multimedia files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY">
+        </div>
     </section>
 
     <section>
@@ -47,59 +49,73 @@
             <h3>Find a Community Center Near You</h3>
             <p>Discover local community centers, their locations, and resources.</p>
             <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
-            <a href=" https://www.visitlex.com/things-to-do/">Explore Lexington</a>
-            <p>
-                <img src="Multimedia files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY">
-            </p>
+            <a href="https://www.visitlex.com/things-to-do/" target="_blank">Explore Lexington</a>
         </article>
-
     </section>
 
     <section>
         <h2>Explore Our Community Resources</h2>
-
         <blockquote>Strong communities are built on connections, shared spaces, and accessible resources for everyone.</blockquote>
 
-        <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" 
-                title="Best Things to do in Lexington" allowfullscreen>
-            Your browser does not support iframes. <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Watch here</a>.
-        </iframe>
+        <div style="text-align: center; margin: 20px 0;">
+            <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" 
+                    title="Best Things to do in Lexington" allowfullscreen>
+                Your browser does not support iframes. <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Watch here</a>.
+            </iframe>
+        </div>
+    </section>
 
+    <section>
+        <h2>Featured Private School: Future Leaders Academy</h2>
+        <p>
+            Future Leaders provides students with a balanced education that emphasizes academic excellence, character development, and community engagement. Serving grades K-12, the school aims to prepare students for lifelong success.
+        </p>
+        <h4>Academic Programs</h4>
         <ul>
-        
-            <li><a href="schools.html">View All Private Schools</a></li>
-            <li><a href="resources.html">Explore Local Resources</a></li>
+            <li><strong>Core Subjects:</strong> Math, Science, Language Arts, Social Studies</li>
+            <li><strong>Languages:</strong> English, Spanish, Arabic, French</li>
+            <li><strong>Clubs & Activities:</strong> Robotics, Art, Spelling Bee</li>
+            <li><strong>Resources:</strong> Counseling and university partnerships</li>
         </ul>
+        <h4>Facilities</h4>
+        <ul>
+            <li><strong>Science Labs:</strong> Fully equipped for hands-on learning</li>
+            <li><strong>Technology Center:</strong> Computers</li>
+            <li><strong>Sports Facilities:</strong> Basketball and Soccer</li>
+            <li><strong>Library:</strong> Wide range of academic and fiction books</li>
+        </ul>
+    </section>
 
-        <article>
-            <header>
-                <h3 id="private-school-highlight">Featured Private School: Future Leaders Academy</h3>
-                <!--<img src="Multimedia files/private_school.png" title="Future Leaders" alt="Future Leaders">-->
-                <p>
-                    Future Leaders provides students with a balanced education that emphasizes academic excellence, character development, and community engagement. Serving grades K-12, the school aims to prepare students for lifelong success.
-                </p>
-            </header>
+    <section>
+        <h2>Things to Do</h2>
+        <ul>
+            <li><a href="https://www.visitlex.com/things-to-do/" target="_blank">Explore Things to Do in Lexington</a></li>
+            <li><a href="https://www.visitlex.com/things-to-do/tours/" target="_blank">Take a Tour</a></li>
+            <li><a href="https://www.visitlex.com/things-to-do/attractions/" target="_blank">Attractions</a></li>
+        </ul>
+    </section>
 
-            <section>
-                <h4>Academic Programs</h4>
-                <ul>
-                    <li><strong>Core Subjects:</strong> Math, Science, Language Arts, Social Studies</li>
-                    <li><strong>Languages:</strong> English, Spanish, Arabic, French</li>
-                    <li><strong>Clubs & Activities:</strong> Robotics, Art, Spelling Bee</li>
-                    <li><strong>Resources:</strong> Counseling and university partnerships</li>
-                </ul>
-            </section>
+    <section>
+        <h2>Hotels</h2>
+        <ul>
+            <li><a href="https://www.visitlex.com/hotels/" target="_blank">Find Hotels in Lexington</a></li>
+            <li><a href="https://www.visitlex.com/hotels/bed-and-breakfasts/" target="_blank">Bed and Breakfasts</a></li>
+        </ul>
+    </section>
 
-            <section>
-                <h4>Facilities</h4>
-                <ul>
-                    <li><strong>Science Labs:</strong> Fully equipped for hands-on learning</li>
-                    <li><strong>Technology Center:</strong> Computers</li>
-                    <li><strong>Sports Facilities:</strong> Basketball and Soccer</li>
-                    <li><strong>Library:</strong> Wide range of academic and fiction books</li>
-                </ul>
-            </section>
-        </article>
+    <section>
+        <h2>Restaurants</h2>
+        <ul>
+            <li><a href="https://www.visitlex.com/restaurants/" target="_blank">Explore Lexington Restaurants</a></li>
+            <li><a href="https://www.visitlex.com/restaurants/bourbon-bars/" target="_blank">Bourbon Bars</a></li>
+            <li><a href="https://www.visitlex.com/restaurants/farm-to-table/" target="_blank">Farm to Table Dining</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Upcoming Events Calendar (RSS Feed)</h2>
+        <p>Stay up to date with events happening in Lexington:</p>
+        <a href="https://www.visitlex.com/things-to-do/calendar-of-events/" target="_blank">VisitLex Events Calendar</a>
     </section>
 </main>
 
